# TicTacToe

./: .gitignore  CMakeLists.txt  README.md
Engine/: CMakeLists.txt  Config.h.in
Engine/include/: EntryPoint.h
Engine/include/engine/: Board.h  Core.h  Engine.h  Renderer.h  Shader.h  WindowManager.h
Engine/shader/: fShader.glsl  vShader.glsl
Engine/src/: EntryPoint.cpp
Engine/src/engine/: Board.cpp  Engine.cpp  Renderer.cpp  Shader.cpp  WindowManager.cpp  glad.c
Game/: CMakeLists.txt
Game/include/game/: GameApplication.h
Game/src/game/: GameApplication.cpp
